starwars game logic - fixed spacing issue in game section

--- a/css/style.css
+++ b/css/style.css
@@ -218,11 +218,11 @@ input:hover {
   align-items: center;
   height: 150px;
   width: 90%;
-  font-size: 18px;
+  font-size: 16px;
   background-image: url('https://i.imgur.com/ieiDLHg.jpg');
   background-size: cover;
   margin: 20px auto;
-  padding: 2px 20px;
+  padding: 2px ;
   border: 4px solid #aaaaaa;
   box-shadow: 2px 2px #36454f;
   border-radius: 3px;
